--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Registration Page</title>
-	<link rel="stylesheet" href="lab2.2.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
     <form>
